added about and made small visual changes

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@ layout: default
 <div class="portfolio">
     <img src="assets/img/photo.jpg" width="150"/>
     <ul>
-        <h3>Education:</h3>
+        <h1>Education:</h1>
         {% for education in site.data.education %}
         <li>
             <span>{{ education.time }}</span>
         </li>
         <li>
-        <span>{{ education.title }}, {{ education.school }}, {{ education.college }}</span>
+          <span>{{ education.title }}, {{ education.school }}. </span>
+        </li>
+        <li>
+          {{ education.notes }}
         </li>
         {% endfor %}
     </ul>
@@ -21,7 +24,7 @@ layout: default
 
 <div class="portfolio">
     <ul>
-        <h3>Projects:</h3>
+        <h1>Projects:</h1>
         {% for item in site.data.projects %}
         <li>
             <span>{{ item.name }}</span>
@@ -32,4 +35,3 @@ layout: default
         {% endfor %}
     </ul>
 </div>
-
